# bwg

./: Makefile  README.md  pyproject.toml
src/: main.py
src/routers/: items.py
src/utils/: fetch_currency.py
